@@ -1,0 +1,82 @@
+use strict;
+use warnings;
+
+use lib 't/';
+
+use RPiTest qw(check_pin_status);
+use RPi::WiringPi;
+use RPi::WiringPi::Constant qw(:all);
+use Test::More;
+
+my $mod = 'RPi::WiringPi';
+
+BEGIN {
+    if ($> == 0){
+        $ENV{PI_BOARD} = 1;
+    }
+
+    if (! $ENV{PI_BOARD}){
+        warn "\n*** PI_BOARD is not set! ***\n";
+        $ENV{NO_BOARD} = 1;
+        plan skip_all => "not on a pi board\n";
+        exit;
+    }
+
+    if ($> != 0){
+        print "enforcing sudo for Interrupt tests...\n";
+        system('sudo', 'perl', $0);
+        exit;
+    }
+}
+
+BEGIN {
+    my $c;
+
+    sub handler {
+        $c++;
+        $ENV{PI_INTERRUPT} = $c;
+    }
+}
+
+my $pi = $mod->new;
+
+# pin specific interrupts
+
+my $pin = $pi->pin(18);
+
+if (! $ENV{NO_BOARD}){
+
+    # EDGE_BOTH
+    
+    $pin->pull(PUD_DOWN);
+
+    $pin->set_interrupt(EDGE_BOTH, 'main::handler');
+
+    # trigger the interrupt
+
+    $pin->pull(PUD_UP);
+    $pin->pull(PUD_DOWN);
+
+    is $ENV{PI_INTERRUPT}, 2, "1st interrupt ok";
+
+    # trigger the interrupt
+
+    $pin->pull(PUD_UP);
+    $pin->pull(PUD_DOWN);
+    
+    is $ENV{PI_INTERRUPT}, 4, "2nd interrupt ok";
+
+    # trigger the interrupt
+
+    $pin->pull(PUD_UP);
+    $pin->pull(PUD_DOWN);
+    
+    is $ENV{PI_INTERRUPT}, 6, "3rd interrupt ok";
+    
+}
+
+$pi->cleanup;
+
+check_pin_status();
+
+done_testing();
